@@ -1,5 +1,9 @@
 2009-02-27  Scott Ellington  <scott.ellington@gmail.com>
 
+	* WellKnownBinaryTests.cs: add parse linestring
+
+2009-02-27  Scott Ellington  <scott.ellington@gmail.com>
+
 	* AssemblyInfo.cs: bump version
 
 2009-02-24  Scott Ellington  <scott.ellington@gmail.com>
